ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Is_1st_EMI_due_date_correctly_captured__c.field-meta.xml
<CustomField>
    <fullName>Is_1st_EMI_due_date_correctly_captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 1st EMI due date correctly captured ?</label>
    <type>Checkbox</type>
</CustomField>