ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Is_Additional_Loan_Agreement_Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Is_Additional_Loan_Agreement_Stamp_Duty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there any Additional LA stamp duty ?</label>
    <type>Checkbox</type>
</CustomField>