ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Is_application_eligible_for_e_agreement__c.field-meta.xml
<CustomField>
    <fullName>Is_application_eligible_for_e_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether application is eligible for e Agreement</description>
    <label>Is Application Eligible for E-Agreement</label>
    <type>Checkbox</type>
</CustomField>