ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Is_Physical_Agreement_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Physical_Agreement_Eligible__c</fullName>
    <label>Is Agreement Eligible ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>