ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Is_Stamp_Duty_as_per_norms__c.field-meta.xml
<CustomField>
    <fullName>Is_Stamp_Duty_as_per_norms__c</fullName>
    <label>Is Stamp Duty as per norms?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>