ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Ist_EMI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Ist_EMI_Due_Date__c</fullName>
    <label>Ist EMI Due Date</label>
    <type>Date</type>
</CustomField>