ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Loan_agreement_details_Correctly_Capture__c.field-meta.xml
<CustomField>
    <fullName>Loan_agreement_details_Correctly_Capture__c</fullName>
    <label>Loan agreement details Correctly Capture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>