ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Loan_Agreement_Stamping_Met__c.field-meta.xml
<CustomField>
    <fullName>Loan_Agreement_Stamping_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Agreement Stamping Met</label>
    <type>Checkbox</type>
</CustomField>