ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Agreements</relationshipLabel>
    <relationshipName>Loan_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>