ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Physical_Agreement_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Physical_Agreement_Remarks__c</fullName>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>