ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/POA_Stamping_Met__c.field-meta.xml
<CustomField>
    <fullName>POA_Stamping_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POA Stamping Met</label>
    <type>Checkbox</type>
</CustomField>