ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Require_Addl_Loan_Agreement_Stamp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Require_Addl_Loan_Agreement_Stamp_Amount__c</fullName>
    <label>Require Addl Loan Agreement Stamp Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>