ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Require_Physical_Agreement_Sign__c.field-meta.xml
<CustomField>
    <fullName>Require_Physical_Agreement_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Physical Agreement Sign</label>
    <type>Checkbox</type>
</CustomField>