ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Required_Loan_Agreement_Stamping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Required_Loan_Agreement_Stamping_Charges__c</fullName>
    <label>Required Loan Agreement Stamping Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>