ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ScannedBookLet__c.field-meta.xml
<CustomField>
    <fullName>ScannedBookLet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ScannedBookLet</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>Loan Agreements</relationshipLabel>
    <relationshipName>Loan_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>