ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Stamping_Charges_Required_On_EAgreement__c.field-meta.xml
<CustomField>
    <fullName>Stamping_Charges_Required_On_EAgreement__c</fullName>
    <label>Stamping Charges Required For eAgreement</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>