ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Tentative_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Payment_Date__c</fullName>
    <label>Tentative Payment Date</label>
    <type>Date</type>
</CustomField>