ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Total_Loan_Agreement_Stamp_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Agreement_Stamp_Value__c</fullName>
    <label>Total Loan Agreement Stamping</label>
    <summarizedField>Stamp_Detail__c.Stamp_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Stamp_Detail__c.Type__c</field>
        <operation>equals</operation>
        <value>Loan Agreement, Additional LA</value>
    </summaryFilterItems>
    <summaryForeignKey>Stamp_Detail__c.Loan_Agreement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>