ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Total_Loan_Agreement_Stamping__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Agreement_Stamping__c</fullName>
    <label>Total Loan Agreement Stamping</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>