ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Total_Value_to_be_Stamped__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_to_be_Stamped__c</fullName>
    <formula>Required_Loan_Agreement_Stamping_Charges__c + ASD_POA_Required_POA_Stamping_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value to be Stamped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>