ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/X2nd_EMI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_EMI_Due_Date__c</fullName>
    <label>2nd EMI Due Date</label>
    <type>Date</type>
</CustomField>