ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>